refactor: mvc architecture

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </div><br>
     <footer>Criado por Carolly Barbosa ----------------- Resilia Educação [Web Dev FullStack]</footer>
 
-
-    <script src="./index.js"></script>
+    <script src="./src/app/model/EncriptadorCesar.js"></script>
+    
 
 </body>
 </html>
