debug: decryptor, add: decryptor view, project as minimum viable product

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <button id="textoDecod" onclick="encriptadorController.Decryptor(event)">
         decodificar mensagem
       </button>
-
+      <div ><p>Sua mensagem será exibida abaixo:</p></div>
       <div id="resultado"></div>
     </div>
     <br />
@@ -54,7 +54,8 @@
     <script src="./src/app/model/Encryptors.js"></script>
     <script src="./src/app/model/Decryptors.js"></script>
     <script src="./src/app/controller/EncriptadorController.js"></script>
-    <script src="./src/app/view/EncriptView.js"></script>
+    <script src="./src/app/view/EncryptView.js"></script>
+    <script src="./src/app/view/DecryptView.js"></script>
     <script>
       let encriptadorController = new EncriptadorController();
     </script>
